<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:app="http://schemas.android.com/apk/res-auto"
              xmlns:tools="http://schemas.android.com/tools"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:orientation="vertical">

    <EditText
        android:id="@+id/userFilter"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@android:drawable/editbox_background_normal"
        android:backgroundTint="@android:color/white"
        android:hint="@string/hint_text_find"
        android:textColor="@android:color/black"
        android:textColorLink="@android:color/holo_blue_dark"/>

    <RadioGroup
        android:id="@+id/RadioGroup"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <RadioButton
            android:id="@+id/radioButton1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:checked="false"
            android:text="@string/radioBtn_1"
            android:textColorLink="@android:color/holo_blue_dark"
            app:buttonTint="@android:color/holo_blue_dark"/>

        <RadioButton
            android:id="@+id/radioButton2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/radioBtn_2"
            android:textColorLink="@android:color/holo_blue_dark"
            app:buttonTint="@android:color/holo_blue_dark"/>

        <RadioButton
            android:id="@+id/radioButton3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/radioBtn_3"
            android:textColorLink="@android:color/holo_blue_dark"
            app:buttonTint="@android:color/holo_blue_dark"/>

    </RadioGroup>

    <ListView
        android:id="@+id/userList"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:headerDividersEnabled="false">
    </ListView>
</LinearLayout>