<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@android:color/black"
    android:orientation="horizontal">

    <HorizontalScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@android:color/black">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:background="@android:color/black"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/text1_1"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"
                android:gravity="center_vertical"
                android:text="@string/column_19"
                android:textAlignment="center"
                android:textColor="@android:color/holo_blue_dark"/>

            <TextView
                android:id="@+id/text1"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"
                android:gravity="center_vertical"
                android:text="TextView"
                android:textAlignment="center"
                android:textColor="@android:color/holo_green_light"/>

            <TextView
                android:id="@+id/text1_2"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"
                android:gravity="center_vertical"
                android:text="@string/column_1"
                android:textAlignment="center"
                android:textColor="@android:color/holo_blue_dark"/>

            <TextView
                android:id="@+id/text2"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"
                android:gravity="center_vertical"
                android:text="TextView"
                android:textAlignment="center"
                android:textColor="@android:color/holo_green_light"/>

            <TextView
                android:id="@+id/text1_3"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"
                android:gravity="center_vertical"
                android:text="@string/column_2"
                android:textAlignment="center"
                android:textColor="@android:color/holo_blue_dark"/>

            <TextView
                android:id="@+id/text3"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"
                android:gravity="center_vertical"
                android:text="TextView"
                android:textAlignment="center"
                android:textColor="@android:color/holo_green_light"/>

            <TextView
                android:id="@+id/text1_4"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"
                android:gravity="center_vertical"
                android:text="@string/column_3"
                android:textAlignment="center"
                android:textColor="@android:color/holo_blue_dark"/>

            <TextView
                android:id="@+id/text4"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"
                android:gravity="center_vertical"
                android:text="TextView"
                android:textAlignment="center"
                android:textColor="@android:color/holo_green_light"/>

            <TextView
                android:id="@+id/text1_5"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"
                android:gravity="center_vertical"
                android:text="@string/column_4"
                android:textAlignment="center"
                android:textColor="@android:color/holo_blue_dark"/>

            <TextView
                android:id="@+id/text5"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"
                android:gravity="center_vertical"
                android:text="TextView"
                android:textAlignment="center"
                android:textColor="@android:color/holo_green_light"/>

            <TextView
                android:id="@+id/text1_6"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"
                android:gravity="center_vertical"
                android:text="@string/column_5"
                android:textAlignment="center"
                android:textColor="@android:color/holo_blue_dark"/>

            <TextView
                android:id="@+id/text6"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"
                android:gravity="center_vertical"
                android:text="TextView"
                android:textAlignment="center"
                android:textColor="@android:color/holo_green_light"/>

            <TextView
                android:id="@+id/text1_7"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"
                android:gravity="center_vertical"
                android:text="@string/column_6"
                android:textAlignment="center"
                android:textColor="@android:color/holo_blue_dark"/>

            <TextView
                android:id="@+id/text7"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"
                android:gravity="center_vertical"
                android:text="TextView"
                android:textAlignment="center"
                android:textColor="@android:color/holo_green_light"/>

            <TextView
                android:id="@+id/text1_8"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"
                android:gravity="center_vertical"
                android:text="@string/column_7"
                android:textAlignment="center"
                android:textColor="@android:color/holo_blue_dark"/>

            <TextView
                android:id="@+id/text8"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"
                android:gravity="center_vertical"
                android:text="TextView"
                android:textAlignment="center"
                android:textColor="@android:color/holo_green_light"/>

            <TextView
                android:id="@+id/text1_9"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"
                android:gravity="center_vertical"
                android:text="@string/column_8"
                android:textAlignment="center"
                android:textColor="@android:color/holo_blue_dark"/>

            <TextView
                android:id="@+id/text9"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"
                android:gravity="center_vertical"
                android:text="TextView"
                android:textAlignment="center"
                android:textColor="@android:color/holo_green_light"/>

            <TextView
                android:id="@+id/text1_10"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"
                android:gravity="center_vertical"
                android:text="@string/column_9"
                android:textAlignment="center"
                android:textColor="@android:color/holo_blue_dark"/>

            <TextView
                android:id="@+id/text10"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"
                android:gravity="center_vertical"
                android:text="TextView"
                android:textAlignment="center"
                android:textColor="@android:color/holo_green_light"/>

            <TextView
                android:id="@+id/text1_11"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"
                android:gravity="center_vertical"
                android:text="@string/column_10"
                android:textAlignment="center"
                android:textColor="@android:color/holo_blue_dark"/>

            <TextView
                android:id="@+id/text11"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"
                android:gravity="center_vertical"
                android:text="TextView"
                android:textAlignment="center"
                android:textColor="@android:color/holo_green_light"/>

            <TextView
                android:id="@+id/text1_12"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"
                android:gravity="center_vertical"
                android:text="@string/column_11"
                android:textAlignment="center"
                android:textColor="@android:color/holo_blue_dark"/>

            <TextView
                android:id="@+id/text12"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"
                android:gravity="center_vertical"
                android:text="TextView"
                android:textAlignment="center"
                android:textColor="@android:color/holo_green_light"/>

            <TextView
                android:id="@+id/text1_13"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"
                android:gravity="center_vertical"
                android:text="@string/column_12"
                android:textAlignment="center"
                android:textColor="@android:color/holo_blue_dark"/>

            <TextView
                android:id="@+id/text13"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"
                android:gravity="center_vertical"
                android:text="TextView"
                android:textAlignment="center"
                android:textColor="@android:color/holo_green_light"/>

            <TextView
                android:id="@+id/text1_14"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"
                android:gravity="center_vertical"
                android:text="@string/column_13"
                android:textAlignment="center"
                android:textColor="@android:color/holo_blue_dark"/>

            <TextView
                android:id="@+id/text14"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"
                android:gravity="center_vertical"
                android:text="TextView"
                android:textAlignment="center"
                android:textColor="@android:color/holo_green_light"/>

            <TextView
                android:id="@+id/text1_15"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"
                android:gravity="center_vertical"
                android:text="@string/column_14"
                android:textAlignment="center"
                android:textColor="@android:color/holo_blue_dark"/>

            <TextView
                android:id="@+id/text15"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"
                android:gravity="center_vertical"
                android:text="TextView"
                android:textAlignment="center"
                android:textColor="@android:color/holo_green_light"/>

            <TextView
                android:id="@+id/text1_16"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"
                android:gravity="center_vertical"
                android:text="@string/column_15"
                android:textAlignment="center"
                android:textColor="@android:color/holo_blue_dark"/>

            <TextView
                android:id="@+id/text16"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"
                android:gravity="center_vertical"
                android:text="TextView"
                android:textAlignment="center"
                android:textColor="@android:color/holo_green_light"/>

            <TextView
                android:id="@+id/text1_17"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"
                android:gravity="center_vertical"
                android:text="@string/column_16"
                android:textAlignment="center"
                android:textColor="@android:color/holo_blue_dark"/>

            <TextView
                android:id="@+id/text17"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"
                android:gravity="center_vertical"
                android:text="TextView"
                android:textAlignment="center"
                android:textColor="@android:color/holo_green_light"/>

            <TextView
                android:id="@+id/text1_18"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"
                android:gravity="center_vertical"
                android:text="@string/column_17"
                android:textAlignment="center"
                android:textColor="@android:color/holo_blue_dark"/>

            <TextView
                android:id="@+id/text18"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"
                android:gravity="center_vertical"
                android:text="TextView"
                android:textAlignment="center"
                android:textColor="@android:color/holo_green_light"/>

            <TextView
                android:id="@+id/text1_19"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"
                android:gravity="center_vertical"
                android:text="@string/column_18"
                android:textAlignment="center"
                android:textColor="@android:color/holo_blue_dark"/>

            <TextView
                android:id="@+id/text19"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"
                android:gravity="center_vertical"
                android:text="TextView"
                android:textAlignment="center"
                android:textColor="@android:color/holo_green_light"/>

        </LinearLayout>
    </HorizontalScrollView>

</LinearLayout>